# ilm-manager

./: .gitignore  Makefile.am  README.md  configure.ac
config/: agl.json
src/: CILMConfig.cpp  CILMConfig.hpp  CILMResource.cpp  CILMResource.hpp  CWindowManager.cpp  CWindowManager.hpp  Makefile.am  ilm-manager.cpp
